2014-07-23  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r171455.
        https://bugs.webkit.org/show_bug.cgi?id=135209

        completely broke selection highlight invalidation (Requested
        by thorton on #webkit).

        Reverted changeset:

        "REGRESSION (r169105): Crash in selection"
        https://bugs.webkit.org/show_bug.cgi?id=134303
        http://trac.webkit.org/changeset/171455

2014-07-23  Alex Christensen  <achristensen@webkit.org>

        Compile window-inactive and fullscreen pseudoclasses in css selectors.
        https://bugs.webkit.org/show_bug.cgi?id=135200

        Reviewed by Benjamin Poulain.

        * css/SelectorChecker.cpp:
        (WebCore::SelectorChecker::checkOne):
        Removed the check of context.hasSelectionPseudo for a window-inactive pseudoclass.
        Moved logic to SelectorCheckerTestFunctions.h to share with the selector compiler.
        * css/SelectorCheckerTestFunctions.h:
        (WebCore::isWindowInactive):
        (WebCore::matchesFullScreenAnimatingFullScreenTransitionPseudoClass):
        (WebCore::matchesFullScreenAncestorPseudoClass):
        (WebCore::matchesFullScreenDocumentPseudoClass):
        Added from SelectorChecker.cpp.
        * cssjit/SelectorCompiler.cpp:
        (WebCore::SelectorCompiler::addPseudoClassType):
        Added unoptimized pseudoclass cases for window-inactive and fullscreen pseudoclasses.
        Explicitly listed uncompiled pseudoclasses for future work instead of using a default.

2014-07-23  Brent Fulgham  <bfulgham@apple.com>

        [Win] Use NO_RETURN_DUE_TO_CRASH on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=13519

        Reviewed by Mark Lam.

        * svg/SVGZoomAndPan.h: Add NO_RETURN_DUE_TO_CRASH to
        header so function declarations match implementation.

2014-07-23  Joseph Pecoraro  <pecoraro@apple.com>

        JSDOMWindowShell leaks on pages with media elements