@@ -1,3 +1,15 @@
+2014-07-23  peavo@outlook.com  <peavo@outlook.com>
+
+        [WinCairo] Gstreamer rendering is not working.
+        https://bugs.webkit.org/show_bug.cgi?id=135201
+
+        Reviewed by Alex Christensen.
+
+        WinCairo does not support accelerated rendering yet.
+
+        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:
+        (WebCore::MediaPlayerPrivateGStreamerBase::supportsAcceleratedRendering):
+
 2014-07-23  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r171455.
